--- a/css/styles.css
+++ b/css/styles.css
@@ -39,10 +39,6 @@ address {
   margin: 0 auto;
 }
 
-.logo {
-  width: 66px;
-  height: 52px;
-}
 /* ------HEADER------ */
 
 .header {
@@ -54,6 +50,8 @@ address {
   align-items: center;
 }
 .logo {
+  width: 66px;
+  height: 52px;
   margin-right: auto;
 }
 .navigation {
@@ -84,10 +82,22 @@ address {
   cursor: pointer;
   background-color: #bbf330;
   border-radius: 30px;
-  padding: 0 17px;
+  padding: 6 18px;
   min-width: 98px;
   height: 32px;
   border: none;
+}
+
+.button-order-now:focus,
+.button-order-now:hover {
+  background: #ffe450;
+}
+
+.hero-img {
+  border-radius: 100%;
+  fill: #fefefe;
+  stroke-width: 26px;
+  stroke: #ffe550;
 }
 
 /* -----HERO----- */
@@ -120,6 +130,17 @@ address {
   margin-bottom: 40px;
 }
 
+.hero-img {
+  border: 16px solid #ffe550;
+  border-radius: 197px;
+
+  height: 397px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
 /* ----ABOUT OUR OFFERINGS */
 .section-about {
   padding-top: 113px;
@@ -127,9 +148,38 @@ address {
   background-color: #ffe550;
 }
 
+/* .about-container {
+  display: flex;
+  align-items: center;
+} */
+
 .section-about .container {
   display: flex;
   align-items: center;
+}
+
+.about-img {
+  margin-top: -150px;
+}
+
+.about-img-wraper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  background-color: #fefefe;
+  width: 502px;
+  height: 502px;
+}
+
+.about-img-border {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 5px solid rgba(255, 255, 255, 0.5);
+  border-radius: 100%;
+  width: 550px;
+  height: 550px;
 }
 
 .about-text-wreper {
@@ -143,6 +193,27 @@ address {
   line-height: 1.2;
   color: #2c2c2c;
   margin-bottom: 20px;
+}
+
+.about-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 48px;
+  height: 48px;
+  border-radius: 100%;
+  background-color: #fefefe;
+  margin-bottom: 8px;
+  color: #7eb101;
+}
+
+.about-link:hover,
+.about-link:focus {
+  color: #587c03;
+}
+
+.about-icon {
+  fill: currentColor;
 }
 
 .about-text-title {
@@ -174,8 +245,23 @@ address {
 }
 
 .button-about {
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 1.5;
+  color: #2c2c2c;
+  cursor: pointer;
   background-color: #fff;
   border: 2px solid #7eb101;
+  border-radius: 30px;
+  padding: 10 22px;
+  min-width: 98px;
+  height: 32px;
+}
+
+.button-about:focus,
+.button-about:hover {
+  background-color: #bbf330;
+  border: none;
 }
 
 /* ------FAVORITES FOOD----- */
@@ -206,6 +292,15 @@ address {
 
 .food-title {
   width: calc((100% - 64px) / 3);
+  border: 16px solid #ffe550;
+  border-radius: 197px;
+
+  height: 397px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px;
+  justify-content: center;
+  align-items: center;
 }
 
 /* -----REVIEW------ */
@@ -214,6 +309,11 @@ address {
   padding-bottom: 126px;
   height: 620px;
   background-color: #ffe550;
+  margin-bottom: 176px;
+}
+
+.container-review {
+  margin-bottom: 176px;
 }
 
 .review-h-title {
@@ -229,6 +329,16 @@ address {
   gap: 139px;
 }
 
+.div-star-container {
+  margin-bottom: 28px;
+}
+
+.icon-svg-star {
+  width: 17px;
+  height: 18px;
+  fill: #ffe550;
+}
+
 .review-list-title {
   border-radius: 0 30px 30px 30px;
   width: 501px;
@@ -241,9 +351,27 @@ address {
   font-weight: 700;
   font-size: 18px;
   color: #2c2c2c;
+  margin-bottom: 40px;
 }
 
 .div-autor-review {
+  display: flex;
+  margin-top: 40px;
+}
+
+.div-review-name {
+  margin-top: 4px;
+  margin-left: 16px;
+}
+
+.div-autor-review::after {
+  content: "";
+
+  height: 52px;
+  width: 1px;
+  border: 1px solid #7eb101;
+  background-size: cover;
+  margin-left: 16px;
 }
 
 .review-name {
@@ -257,6 +385,22 @@ address {
 .section-subscribe {
 }
 
+.container-subscribe {
+  display: flex;
+  margin-bottom: 201px;
+}
+
+.contant-subscribe {
+}
+
+.title-subscribe {
+  margin-bottom: 24px;
+}
+
+.title-text-subscribe {
+  margin-bottom: 20px;
+}
+
 .email-form {
 }
 
@@ -265,22 +409,113 @@ address {
   font-size: 12px;
   line-height: 1.5;
   color: #505050;
+  /* border: transparent; */
+  outline: transparent;
+  border: 0.85px solid #ffe550;
+  border-radius: 30px;
+  padding: 10px;
+  width: 395px;
+  height: 42px;
+  background: #fefefe;
 }
 
-.email-subscribe-btn {
+.email-input:hover,
+.email-input:focus,
+.email-input:active {
+  border: transparent;
+  border: 0.85px solid #7eb101;
+}
+
+.email-input::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  line-height: 1.5;
+  color: #505050;
+  margin-left: 11px;
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+
+.button-large {
   font-weight: 500;
   font-size: 13px;
   line-height: 1.5;
   color: #2c2c2c;
+  border-radius: 30px;
+  padding: 10px 20px;
+  width: 103px;
+  height: 42px;
+  background: #bbf330;
+  border: none;
+  transition-property: background-color 250ms linear;
+}
+
+.button-large:hover,
+.button-large:focus {
+  background-color: #ffe450;
 }
 
 /* -----FOOTER----- */
 
+.section-footer {
+  box-shadow: 0 -4px 24px 0 rgba(105, 105, 105, 0.1);
+  padding: 100px 0;
+  background-image: url(../images/fruit-futer.png);
+  background-repeat: no-repeat;
+  background-size: 1211px;
+  background-position: bottom;
+}
+
+.logo-navigation-form-line {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 80px;
+}
+
+.logo-link {
+}
+
+.footer-navigation {
+  /* margin-left: 143px; */
+}
+.footer-wraper {
+  display: flex;
+  gap: 143px;
+}
+
+.block-subscribe-form {
+  margin-left: auto;
+}
+
 .form-name {
+  display: block;
   font-weight: 500;
   font-size: 14px;
+  line-height: 21px;
   line-height: 1.5;
   color: #2c2c2c;
+  margin-bottom: 12px;
+}
+
+.button-link-large {
+  border: 2px solid #7eb101;
+  border-radius: 30px;
+  padding: 10px 20px;
+  min-width: 103px;
+  height: 42px;
+  background: #fff;
+
+  transition-property: border-color 250ms linear;
+  margin-bottom: 12px;
+  margin-left: 13px;
+}
+
+.button-link-large:focus,
+.button-link-large:hover {
+  border-color: #ffe450;
 }
 
 .text-under-input {
@@ -295,7 +530,13 @@ address {
   color: #7eb101;
 }
 
+.down-line-footer {
+  display: flex;
+}
+
 .information-link-list {
+  display: flex;
+  gap: 20px;
 }
 
 .information-link-title {
@@ -310,4 +551,87 @@ address {
   font-weight: 400;
   font-size: 12px;
   color: #2c2c2c;
+  margin-left: auto;
+}
+
+/*  */
+
+.bacdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(94, 99, 99, 0.7);
+}
+.modal {
+  border-radius: 30px;
+  width: 458px;
+  height: 449px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.06);
+  background: #ffe550;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 32px;
+}
+.modal-close-btn {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  border-radius: 100%;
+  background-color: #fff;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.06);
+  line-height: 0;
+  padding: 0;
+  border: none;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+.modal-title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.2;
+  color: #2c2c2c;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.modal-label {
+  display: block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 22px;
+  line-height: 1.4;
+  color: #2c2c2c;
+  margin-bottom: 24px;
+}
+.modal-input {
+  display: block;
+  box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #fff;
+  border: 1px solid rgba(18, 18, 18, 0.12);
+  border-radius: 30px;
+  width: 394px;
+  height: 48px;
+  padding-left: 12px;
+  outline: transparent;
+  margin-top: 2px;
+}
+.modal-send-btn {
+  border: 2px solid #7eb101;
+  border-radius: 30px;
+  padding: 10px 20px;
+  width: 106px;
+  height: 40px;
+  background: #fff;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 1.5;
+  color: #2c2c2c;
+  margin: 0 auto;
+  display: block;
 }
